--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-	"name": "voip24h-sip-gateway",
-  	"version": "1.0.1",
-  	"description": "sip gateway packages by Voip24h",
-	"main": "dist/voip24h.js",
-	"types": "janus.d.ts",
-	"files": [
-		"dist",
+  "name": "voip24h-sip-gateway",
+  "version": "1.0.0",
+  "description": "Sip gateway is libary to use WebRTC custom by VOIP24h",
+  "main": "src/voip24h_module.js",
+  "scripts": {
+    "test": "npm run test"
+  },
+  "files": [
+    "example",
 		"src",
-		"janus.d.ts",
-		"README.md"
+		"README.md",
+    "package-lock.json"
 	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/Voip24h-Corp/voip24h-sip-gateway.git"
 	},
 	"keywords": [
-	"sip-gateway"
+		"sip-gateway"
 	],
 	"author": {
 		"name": "Phuong Tran",
@@ -26,19 +28,8 @@
 		"url": "https://github.com/Voip24h-Corp/voip24h-sip-gateway/issues"
 	},
 	"homepage": "https://github.com/Voip24h-Corp/voip24h-sip-gateway#readme",
-	"dependencies": {
-		"webrtc-adapter": "8.2.3"
-	},
-	"devDependencies": {
-		"@rollup/plugin-replace": "^5.0.2",
-		"@rollup/plugin-strip": "^3.0.2",
-		"eslint": "^8.39.0",
-		"eslint-plugin-html": "^7.1.0",
-		"rollup": "^3.21.6"
-	},
-	"scripts": {
-		"lint": "eslint ../html --ext .js,.html --resolve-plugins-relative-to ./npm",
-		"rollup": "rollup -c rollup.config.mjs",
-		"prerelease": "npm run rollup -- --o dist/janus.es.js --f es && node -e \"const fs=require('fs'); const data=fs.readFileSync('../html/janus.js'); fs.mkdirSync('./src', {recursive:true}); fs.writeFileSync('./src/janus.js',data);\""
-	}
+  "dependencies": {
+    "janus-gateway": "^1.2.0",
+    "webrtc-adapter": "^8.2.3"
+  }
 }
