--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "voip24h-sip-gateway",
-  "version": "1.0.2",
-  "description": "Sip gateway is libary to use WebRTC custom by VOIP24h",
-  "main": "src/voip24h_module.js",
-  "scripts": {
-    "test": "npm run test"
-  },
-  "files": [
-    "example",
-	"src",
-	"README.md",
-    "package-lock.json"
+	"name": "voip24h-sip-gateway",
+	"version": "1.0.3",
+	"description": "Sip gateway is libary to use WebRTC custom by VOIP24h",
+	"main": "src/voip24h_module.js",
+	"scripts": {
+		"test": "npm run test"
+	},
+	"files": [
+		"example",
+		"src",
+		"README.md",
+		"package-lock.json"
 	],
 	"repository": {
 		"type": "git",
@@ -28,8 +28,9 @@
 		"url": "https://github.com/Voip24h-Corp/voip24h-sip-gateway/issues"
 	},
 	"homepage": "https://github.com/Voip24h-Corp/voip24h-sip-gateway#readme",
-  "dependencies": {
-    "janus-gateway": "^1.2.0",
-    "webrtc-adapter": "^8.2.3"
-  }
+	"dependencies": {
+		"janus-gateway-with-adapter": "^1.0.0",
+		"jquery": "^3.7.1",
+		"webrtc-adapter": "^8.2.3"
+	}
 }
